changed stuff again

--- a/BlazorAppTest/appsettings.json
+++ b/BlazorAppTest/appsettings.json
@@ -1,7 +1,10 @@
 {
+  //"Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorAppTest-0d97eb37-778f-4ef3-b773-c06886f097ea;Trusted_Connection=True;MultipleActiveResultSets=true",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorAppTest-0d97eb37-778f-4ef3-b773-c06886f097ea;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MockConnection": "Data Source=MockDB.db"
+    "MockConnection": "Data Source=MockDB.db",
+    "ToDoConnection": "Server=(localdb)\\mssqllocaldb;Database=ToDoDatabase;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MockToDoConnection": "Data Source=MockToDoDB.db"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +12,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:5000/"
+
+
+      },
+      "Https": {
+        "Url": "https://localhost:5001/",
+        "Certificate": {
+          "Path": "",
+          "Password": ""
+
+        }
+      }
+    }
+  },
+    "AllowedHosts": "*"
+  }
