--- a/BlazorAppTest/Properties/launchSettings.json
+++ b/BlazorAppTest/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7243;http://localhost:5043"
+      "applicationUrl": "https://localhost:5001;"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -34,6 +34,17 @@
         "ASPNETCORE_URLS": "https://localhost:7243;http://localhost:5043"
       },
       "distributionName": ""
+    },
+    "Container (Dockerfile)": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTP_PORTS": "8080"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
